Fixed spacing

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -3,7 +3,7 @@
     position: relative;
     float: center;
     text-align: center;
-    margin-top: 636px;
+    margin-top: 670px;
     font-family: montserrat, sans-serif;
 }
 
@@ -15,25 +15,26 @@
 .github-mark-contact {
     margin-right: 4%;
     margin-left: 4.2%;
-    margin-top: 3%;
+    margin-top: 2%;
+    margin-bottom: 3%;
     height: 46px;
     width: auto;
-    margin-bottom: 6%;
 }
 
 .linkedin-logo {
-    height: 49px;
+    height: 50px;
     width: auto;
-    margin-bottom: 6%;
-    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-top: 2%;
 
 }
 
 
 .email-icon {
+    position: relative;
     height: 48px;
     width: auto;
-    margin-bottom: 6%;
-    margin-top: 3%;
-
+    margin-bottom: 3%;
+    margin-top: 2%;
+    right: 2px;
 }
